<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/login_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="184dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login_btn"
        android:layout_marginBottom="86dp"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/login_btn"
        android:text="@string/username"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_username"
        android:layout_alignTop="@+id/tv_password"
        android:ems="7"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="16sp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_username"
        android:layout_below="@+id/et_username"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tv_username"
        android:layout_alignBottom="@+id/tv_username"
        android:layout_alignLeft="@+id/login_btn"
        android:ems="7"
        android:inputType="text"
        android:singleLine="true"
        android:textSize="16sp" />

</RelativeLayout>